section banner + header styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAR SHARING</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>CAR SHARING</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800;900&family=Open+Sans:wght@300;400&display=swap"
+		rel="stylesheet">
 </head>
+
 <body>
-    
+	<header class="banner">
+		<div class="filter"></div>
+		<div class="header-bar">
+			<div class="container">
+				<div class="logo">
+					<img src="images/Icon Logo Normal.svg" alt="">
+					<a href="#"><span>Car</span>Sharing</a>
+				</div>
+				<nav class="page-nav">
+					<ul class="page-nav-list">
+						<li><a href="">HOME</a></li>
+						<li><a href="">BLOG</a></li>
+						<li><a href="">SERVICE</a></li>
+						<li><a href="">CONTACT</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		<div class="container">
+			<h1 class="banner-title">CAR SHARING</h1>
+			<p class="banner-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nemo, aut placeat
+				exercitationem voluptas
+				nostrum, aliquid culpa repudiandae optio veritatis voluptatem est ducimus eum sapiente eos voluptates maxime
+				ullam provident.
+			</p>
+			<div class="banner-buttons">
+				<a href="#" class="btn banner-btn-red"> SHARE A CAR</a>
+				<a href="#" class="btn banner-btn-white">KEY FEATURES</a>
+			</div>
+			<div class="arrow-down">
+				<img src="images/Icon Arrow Down.svg" alt="">
+			</div>
+		</div>
+
+	</header>
 </body>
+
 </html>
