blog section HTML structure and CSS styling

--- a/index.html
+++ b/index.html
@@ -48,6 +48,44 @@
 		</div>
 
 	</header>
+	<section id="blog" class="blog">
+		<div class="container">
+			<div class="medium-headre-container">
+				<h2 class="medium-header"><span>BLOG</span></h2>
+			</div>
+			<div class="article-container">
+				<article class="article">
+					<img src="images/photo1.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="blog-btn"> READ MORE</a>
+				</article>
+				<article class="article">
+					<img src="images/photo2.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="blog-btn"> READ MORE</a>
+				</article>
+				<article class="article">
+					<img src="images/photo3.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="blog-btn"> READ MORE</a>
+				</article>
+			</div>
+		</div>
+
+	</section>
+
 </body>
 
 </html>
