--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</header>
 	<section id="blog" class="blog">
 		<div class="container">
-			<div class="medium-headre-container">
+			<div class="medium-header-container">
 				<h2 class="medium-header"><span>BLOG</span></h2>
 			</div>
 			<div class="article-container">
@@ -85,7 +85,52 @@
 		</div>
 
 	</section>
-
+	<section id="service" class="service">
+		<div class="container">
+			<div class="medium-header-container">
+				<h2 class="medium-header"><span>SERVICE</span></h2>
+			</div>
+			<div class="service-container">
+				<article class="service-article">
+					<img src="images/mini1.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="service-btn"> READ MORE</a>
+				</article>
+				<article class="service-article">
+					<img src="images/mini2.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="service-btn"> READ MORE</a>
+				</article>
+				<article class="service-article">
+					<img src="images/mini3.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="service-btn"> READ MORE</a>
+				</article>
+				<article class="service-article">
+					<img src="images/mini4.png" alt="">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facilis et quia, neque explicabo est animi
+						labore, perspiciatis dolorum atque architecto cum corrupti cumque? Debitis libero ipsam eveniet itaque
+						magnam?
+					</p>
+					<a href="#" class="service-btn"> READ MORE</a>
+				</article>
+			</div>
+		</div>
+	</section>
+	</section>
 </body>
 
 </html>
