--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
 				</article>
 			</div>
 		</div>
-
 	</section>
 	<section id="service" class="service">
 		<div class="container">
@@ -130,6 +129,40 @@
 			</div>
 		</div>
 	</section>
+	<section class="contact">
+		<div class="container">
+			<div class="medium-header-container">
+				<h2 class="medium-header"><span>SERVICE</span></h2>
+			</div>
+			<div class="contact-container">
+				<img src="images/Form Photo.png" alt="">
+				<div class="form-container">
+					<label>
+						<input type="text" placeholder="Type Your name">
+					</label>
+					<label>
+						<input type="email" placeholder="Type Your e-mail">
+					</label>
+					<label>
+						<textarea name="message" id="" cols="30" rows="10" placeholder="Type Your message"></textarea>
+					</label>
+					<label class="agreement">
+						<input type="checkbox" name="" id="">
+						<span>
+							<!-- <img src="images/check-solid.svg" alt=""> -->
+						</span>
+						<p>I hereby give consent for my personal data included in my application to be processed for the purposes of
+							the recruitment process under the European Parliament’s and Council of the European Union Regulation on
+							the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and
+							on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)
+						</p>
+					</label>
+					<a class="send-btn" href="#">SEND</a>
+					
+				</div>
+			</div>
+
+		</div>
 	</section>
 </body>
 
