footer section HTML structure +CSS style

--- a/index.html
+++ b/index.html
@@ -158,12 +158,42 @@
 						</p>
 					</label>
 					<a class="send-btn" href="#">SEND</a>
-					
+
 				</div>
 			</div>
 
 		</div>
 	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="logo-container">
+				<div class="logo footer-logo">
+					<img src="images/Icon Logo Normal.svg" alt="">
+					<a href="#"><span>Car</span>Sharing</a>
+				</div>
+			</div>
+			<div class="footer-nav-container">
+				<div class="foter-nav">
+					<ul class="footer-nav-list">
+						<li><a class="red ink" href="">HOME PAGE</a></li>
+						<li><a href="">ABOUT US</a></li>
+						<li><a href="">GALLERY</a></li>
+						<li><a href="">SHARE REGULATION</a></li>
+					</ul>
+					<ul class="footer-nav-list">
+					<li><a href="">PRICE</a></li>
+					<li><a href="">OUR FLEET</a></li>
+					<li><a href="">OUR CLIENTS</a></li>
+					<li><a href="">CONTACT</a></li>
+				</ul>
+				</div>
+				<div class="copyright">
+					<p>Copyright &copy Coders Lab</p>
+				</div>
+			</div>
+
+		</div>
+	</footer>
 </body>
 
 </html>
